# our-eight-cheebee

./: .firebaserc  .gitignore  CLAUDE.md  firebase.json  firestore.rules
.claude/: launch.json  settings.local.json
.gemini/: GEMINI.md
.gemini/skills/antigravity-swarm/: .gitignore  GEMINI_example.md  LICENSE  README.md  README_KO.md  SKILL.md  gemini-extension.json  package.json  requirements.txt  swarm-config.yaml
.gemini/skills/antigravity-swarm/scripts/: compactor.py  dispatch_agent.py  mock_gemini_timeout.sh  orchestrator.py  planner.py  reporter.py  ultrawork_loop.py
.gemini/skills/antigravity-swarm/scripts/core/: __init__.py  audit.py  config.py  mailbox.py  mission.py  types.py
.gemini/skills/antigravity-swarm/scripts/core/backends/: __init__.py  base.py  (+2 more)
backend/: .dockerignore  Dockerfile  fly.toml  pyproject.toml
backend/app/: firebase.py  main.py
backend/app/ecb/: client.py
backend/app/models/: cart.py  list_item.py  product.py
backend/app/routers/: cart.py  coupons.py  product.py  search.py  session.py
backend/scripts/: find_hash.py  setup_session.py  test_session.py
frontend/: .env.example  .gitignore  index.html  package-lock.json  package.json  tsconfig.app.json
frontend/public/: manifest.json  sw.js
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AddFreetext.tsx  AppShell.tsx  BottomNav.tsx  ListItem.tsx  ProductCard.tsx  ProductSearch.tsx  SharedList.tsx  SyncToCart.tsx
frontend/src/hooks/: useProductSearch.ts  useSharedList.ts
frontend/src/lib/: api.ts  firebase.ts
frontend/src/types/: index.ts
