[project]
name = "8cb-list-backend"
version = "0.1.0"
description = "FastAPI backend for shared 8-C-B grocery list PWA"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "texas-grocery-mcp @ git+https://github.com/mgwalkerjr95/texas-grocery-mcp.git",
    "firebase-admin>=6.5.0",
    "playwright>=1.58.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
